Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-928

Debug statement reports garbage value from stack

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 1.6.0
    • 1.6.0
    • c
    • All

    Description

      The debug statement in resolved-writer.c in the function avro_resolved_writer_get_by_index() provides the value of an element from an uninitialized struct on the stack. I believe the intention was to report a different pointer value in the diagnostic.

      Attachments

        1. AVRO-928.patch
          0.5 kB
          Vivek Nadkarni

        Activity

          People

            dcreager Douglas Creager
            vnadkarni Vivek Nadkarni
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 10m
                10m
                Remaining:
                Remaining Estimate - 10m
                10m
                Logged:
                Time Spent - Not Specified
                Not Specified