AVRO-928. Debug statement no longer reports garbage from stack

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1183632 13f79535-47bb-0310-9956-ffa450edef68